# xrvis

./: .gitattributes  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs  xrvis-ci.dockerfile
.cargo/: config.toml
assets/: ball.glb
assets/robots/: generic.glb
assets/shaders/: discard_fragment.wgsl
assets/teams/robots/: generic.glb
net-ext/: Cargo.toml
net-ext/src/: interface_flags.rs  lib.rs  ssm_socket.rs
src/: main.rs
src/sslgame/: depth_mask_material.rs  mesh_generators.rs  mod.rs  network_tasks.rs  ssm_socket.rs  state_filter.rs  state_receiver.rs
src/sslgame/networking/: interface_flags.rs  mod.rs  ssm_socket.rs
src/sslgame/proto/: status_compact.proto  status_streaming.proto  status_streaming_meta.proto
sslgame/: Cargo.toml  build.rs
sslgame/src/: depth_mask_material.rs  lib.rs  mesh_generators.rs  network_tasks.rs  state_filter.rs  visualization_tracker.rs  world_state_filter.rs
sslgame/src/proto/: remote.proto  remote_commands.proto  remote_meta.proto  remote_status.proto
xrvis-desktop/: Cargo.toml
xrvis-desktop/src/: main.rs
xrvis-vr/: Cargo.toml
xrvis-vr/android/: .gitignore  build.gradle.kts  settings.gradle.kts
xrvis-vr/android/gradle/wrapper/: gradle-wrapper.properties
xrvis-vr/android/src/main/: AndroidManifest.xml
xrvis-vr/android/src/main/java/de/erforce/xrvis_vr/: XrVisGameActivity.java
xrvis-vr/src/: interaction.rs  interaction_old.rs  lib.rs  main.rs
xrvis-vr/src/interaction/: input.rs  mod.rs  panels.rs  picking.rs
xrvis-vr/src/panels/: game_state.rs  mod.rs
