[package]
name = "xrvis"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.2"
bevy_panorbit_camera = "0.30.0"
bevy-inspector-egui = "0.34.0"

earcut = "0.4.4"

async-io = "2.6.0"
async-net = "2.0.0"
async-channel = "2.5.0"
prost = "0.14.1"
socket2 = "0.6.0"
network-interface = "2.0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2.171"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock"] }

[build-dependencies]
prost-build = "0.14.1"

# Enable optimizations for dependencies, even in dev mode

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
