[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[workspace]
members = ["net-ext", "sslgame", "xrvis-desktop", "xrvis-vr"]
resolver = "2"

[workspace.dependencies]
net-ext = { path = "net-ext" }
sslgame = { path = "sslgame" }

bevy = "0.17.2"
bevy_mod_openxr = { git = "https://github.com/S4ndf1re/bevy_oxr.git", branch = "version_bump" }
bevy_mod_xr = { git = "https://github.com/S4ndf1re/bevy_oxr.git", branch = "version_bump" }
bevy-inspector-egui = "0.34.0"
bevy_panorbit_camera = "0.31.0"

earcut = "0.4.4"

async-channel = "2.5.0"
async-io = "2.6.0"
async-net = "2.0.0"

network-interface = "2.0.3"
prost = "0.14.1"
prost-build = "0.14.1"
socket2 = "0.6.1"

libc = "0.2.171"
windows-sys = { version = "0.61.2", features = ["Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock"] }

# Prioritize iteration times for our code, but enable optimizations for all dependencies
[profile.dev.package]
net-ext.opt-level = 1
sslgame.opt-level = 1
xrvis-desktop.opt-level = 1
xrvis-vr.opt-level = 1
"*".opt-level = 3

[profile.release]
panic = "abort"
