[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[workspace]
members = ["net-ext", "sslgame", "xrvis-desktop", "xrvis-vr"]
resolver = "3"

[workspace.dependencies]
net-ext = { path = "net-ext" }
sslgame = { path = "sslgame" }

bevy = "0.18.0"
bevy_mod_openxr = { version = "0.5.0", features = ["fb_passthrough"] }
bevy_mod_xr = "0.5.0"
bevy-inspector-egui = "0.36.0"
bevy_panorbit_camera = "0.34.0"

bytes = "1.11.1"
tracing = "*" # Matching bevy's version, just for the #[instrument] macro

earcut = "0.4.5"

async-channel = "2.5.0"
async-io = "2.6.0"
async-net = "2.0.0"
async-tungstenite = "0.32.1"

network-interface = "2.0.5"
prost = "0.14.3"
prost-build = "0.14.3"
socket2 = "0.6.2"

libc = "0.2.171"
windows-sys = { version = "0.61.2", features = ["Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock"] }

# Prioritize iteration times for our code, but enable optimizations for all dependencies
[profile.dev.package]
net-ext.opt-level = 1
sslgame.opt-level = 1
xrvis-desktop.opt-level = 1
xrvis-vr.opt-level = 1
"*".opt-level = 3

[profile.release]
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
