[package]
name = "xrvis-vr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# The package has to be available as a library for android builds
[lib]
name = "xrvis_vr_lib"
crate-type = ["lib", "cdylib"]

[dependencies]
bevy.workspace = true
bevy_mod_openxr.workspace = true
bevy_mod_xr.workspace = true
sslgame.workspace = true
